# uv_bug_mre_2

./: create_libs.py
ecosystem_settings/: __init__.py  pyproject.toml
ecosystem_settings/src/qa_ecosystem_settings/: __init__.py
logging_lib/: pyproject.toml
logging_lib/src/qa_logging_lib/: __init__.py
py_wintreist/: pyproject.toml
py_wintreist/src/qa_py_wintreist/: __init__.py
test_lib_2/: __init__.py
test_lib_3/: __init__.py
test_lib_4/: __init__.py
test_lib_5/: __init__.py
test_lib_6/: __init__.py
test_lib_7/: __init__.py
test_lib_8/: __init__.py
test_lib_9/: __init__.py
